--- a/ooresults/templates/clubs_tab_content.html
+++ b/ooresults/templates/clubs_tab_content.html
@@ -62,6 +62,9 @@ $def with (clubs_table)
                 window.alert(this.responseText);
             }
         };
+        xhr.onerror = function() {
+            window.alert("Network error");
+        };
         xhr.open("POST", "club/fill_edit_form", true);
         xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
         xhr.send("id=");
@@ -95,6 +98,9 @@ $def with (clubs_table)
                         window.alert(this.responseText);
                     }
                 };
+                xhr.onerror = function() {
+                    window.alert("Network error");
+                };
                 xhr.open("POST", "club/fill_edit_form", true);
                 xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
                 xhr.send("id=".concat(table.rows[i].id));
@@ -117,6 +123,9 @@ $def with (clubs_table)
                 window.alert(this.responseText);
             }
         };
+        xhr.onerror = function() {
+            window.alert("Network error");
+        };
         xhr.open("POST", "club/add", true);
         xhr.send(data);
     }
@@ -136,6 +145,9 @@ $def with (clubs_table)
                 window.alert(this.responseText);
             }
         };
+        xhr.onerror = function() {
+            window.alert("Network error");
+        };
         xhr.open("POST", "club/delete", true);
         xhr.send(data);
     }
@@ -152,6 +164,9 @@ $def with (clubs_table)
             if (this.readyState == 4 && this.status == 500) {
                 window.alert(this.responseText);
             }
+        };
+        xhr.onerror = function() {
+            window.alert("Network error");
         };
         xhr.open("POST", "club/update", true);
         xhr.send();
