--- a/ooresults/templates/series_settings.html
+++ b/ooresults/templates/series_settings.html
@@ -23,7 +23,7 @@ $def with (settings)
                         $if str(mode) == str(settings.mode):
                             <option value="$mode" selected>$mode</option>
                         $else:
-                            <option value="$mode">$gender</option>
+                            <option value="$mode">$mode</option>
                     </select>
                 </td>
             </tr>
