--- a/ooresults/templates/add_entry.html
+++ b/ooresults/templates/add_entry.html
@@ -83,7 +83,7 @@ $else:
                 <td><input id="chip" name="chip" type="text" value="$chip" onchange="mark_label(this)" $readonly/></td>
             </tr>
             <tr>
-                <th class="input-header"><label for="club">Club</label></th>
+                <th class="input-header"><label for="club_id">Club</label></th>
                 <td>
                     <select id="club_id" name="club_id" onchange="mark_label(this)">
                     $if club_id is None:
@@ -99,7 +99,7 @@ $else:
                 </td>
             </tr>
             <tr>
-                <th class="input-header"><label for="class_">Class *</label></th>
+                <th class="input-header"><label for="class_id">Class *</label></th>
                 <td>
                     <select id="class_id" name="class_id" onchange="mark_label(this)" required>
                     $for class_ in classes:
